solve vowel count and sum of two lowest integer in arr

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Codewars Questions</title>
     <!-- <script src="./js-questions/ReverseString>5.js"></script> -->
     <!-- <script src="./js-questions/DetectPangram.js"></script> -->
+    <!-- <script src="./js-questions/VowelCount.js"></script> -->
+    <script src="./js-questions/Sum2LowestInts.js"></script>
   </head>
   <body>
     <h1 style="text-align: center">JAVASCRIPT CODEWARS QUESTIONS</h1>
