--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <!-- <script src="./js-questions/DetectPangram.js"></script> -->
     <!-- <script src="./js-questions/VowelCount.js"></script> -->
     <!-- <script src="./js-questions/Sum2LowestInts.js"></script> -->
-    <script src="./js-questions/XsandOsCount.js"></script>
+    <!-- <script src="./js-questions/XsandOsCount.js"></script> -->
+    <!-- <script src="./js-questions/PeopleInBusRem.js"></script> -->
+    <script src="./js-questions/UniqueNumInArray.js"></script>
   </head>
   <body>
     <h1 style="text-align: center">JAVASCRIPT CODEWARS QUESTIONS</h1>
