--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Codewars Questions</title>
+    <!-- https://www.codewars.com/kata/525f3eda17c7cd9f9e000b39/train/javascript -->
+    <!-- https://www.codewars.com/kata/550554fd08b86f84fe000a58/train/javascript -->
+    <!-- https://www.codewars.com/kata/5839edaa6754d6fec10000a2/train/javascript -->
+    <!-- https://www.codewars.com/kata/523f5d21c841566fde000009/train/javascript -->
+
     <!-- <script src="./js-questions/ReverseString>5.js"></script> -->
     <!-- <script src="./js-questions/DetectPangram.js"></script> -->
     <!-- <script src="./js-questions/VowelCount.js"></script> -->
     <!-- <script src="./js-questions/Sum2LowestInts.js"></script> -->
     <!-- <script src="./js-questions/XsandOsCount.js"></script> -->
     <!-- <script src="./js-questions/PeopleInBusRem.js"></script> -->
-    <script src="./js-questions/UniqueNumInArray.js"></script>
+    <!-- <script src="./js-questions/UniqueNumInArray.js"></script> -->
+    <!-- <script src="./js-questions/ArmstrongNum.js"></script> -->
+    <!-- <script src="./js-questions/StringIncrementer.js"></script> -->
+    <script src="./js-questions/ArrDifference.js"></script>
   </head>
   <body>
     <h1 style="text-align: center">JAVASCRIPT CODEWARS QUESTIONS</h1>
