complete roman numerals question

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- https://www.codewars.com/kata/550554fd08b86f84fe000a58/train/javascript -->
     <!-- https://www.codewars.com/kata/5839edaa6754d6fec10000a2/train/javascript -->
     <!-- https://www.codewars.com/kata/523f5d21c841566fde000009/train/javascript -->
+    <!-- https://www.codewars.com/kata/52bc74d4ac05d0945d00054e/train/javascript -->
+    <!-- https://www.codewars.com/kata/52423db9add6f6fc39000354/train/javascript -->
 
     <!-- <script src="./js-questions/ReverseString>5.js"></script> -->
     <!-- <script src="./js-questions/DetectPangram.js"></script> -->
@@ -18,7 +20,8 @@
     <!-- <script src="./js-questions/UniqueNumInArray.js"></script> -->
     <!-- <script src="./js-questions/ArmstrongNum.js"></script> -->
     <!-- <script src="./js-questions/StringIncrementer.js"></script> -->
-    <script src="./js-questions/ArrDifference.js"></script>
+    <!-- <script src="./js-questions/ArrDifference.js"></script> -->
+    <script src="./js-questions/RomanNumerals.js"></script>
   </head>
   <body>
     <h1 style="text-align: center">JAVASCRIPT CODEWARS QUESTIONS</h1>
