complete break camel case question

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <!-- <script src="./js-questions/ArmstrongNum.js"></script> -->
     <!-- <script src="./js-questions/StringIncrementer.js"></script> -->
     <!-- <script src="./js-questions/ArrDifference.js"></script> -->
-    <script src="./js-questions/RomanNumerals.js"></script>
+    <!-- <script src="./js-questions/RomanNumerals.js"></script> -->
+    <script src="./js-questions/BreakCamelCase.js"></script>
   </head>
   <body>
     <h1 style="text-align: center">JAVASCRIPT CODEWARS QUESTIONS</h1>
