complete adding big numbers question

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <!-- <script src="./js-questions/StringIncrementer.js"></script> -->
     <!-- <script src="./js-questions/ArrDifference.js"></script> -->
     <!-- <script src="./js-questions/RomanNumerals.js"></script> -->
-    <script src="./js-questions/BreakCamelCase.js"></script>
+    <!-- <script src="./js-questions/BreakCamelCase.js"></script> -->
+    <script src="./js-questions/AddingBigNums.js"></script>
   </head>
   <body>
     <h1 style="text-align: center">JAVASCRIPT CODEWARS QUESTIONS</h1>
